@@ -28,15 +28,19 @@ let rec print_ident ppf =
   | Oide_apply (id1, id2) ->
       fprintf ppf "%a(%a)" print_ident id1 print_ident id2
 
+let parenthesized_ident name =
+  (List.mem name ["or"; "mod"; "land"; "lor"; "lxor"; "lsl"; "lsr"; "asr"])
+  ||
+  (match name.[0] with
+      'a'..'z' | '\223'..'\246' | '\248'..'\255' | '_' ->
+        false
+    | _ -> true)
+
 let value_ident ppf name =
-  if List.mem name
-       ["or"; "mod"; "land"; "lor"; "lxor"; "lsl"; "lsr"; "asr"] then
+  if parenthesized_ident name then
     fprintf ppf "( %s )" name
   else
-    match name.[0] with
-      'a'..'z' | '\223'..'\246' | '\248'..'\255' | '_' ->
-        fprintf ppf "%s" name
-    | _ -> fprintf ppf "( %s )" name
+    fprintf ppf "%s" name
 
 (* Values *)
 
